--- a/main.css
+++ b/main.css
@@ -57,3 +57,47 @@
 .text-center.row.col-lg-6{
     text-align: center;
 }
+/** media -queries ------**/
+
+@media only screen and (max-width: 600px) {
+    .container{
+        width: 90%;
+        margin: 0 auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        text-align: center;
+        padding: 0;   
+    }
+    .row{
+       margin-bottom: 0%;
+       margin-top: 100%;
+    }
+    .col-lg-6{
+        padding: 0;
+        margin: 0;
+        text-align: left;
+    }
+    .text-center.row{
+        text-align: center;
+    }
+    .main h3{
+        font-size: 30px;
+    }
+    .main h5{
+        font-size: 20px;
+    }
+    .bt1-mt-5{
+        height: 55px;
+    }
+    .text-center h3{
+        font-size: 30px;
+    } 
+    .nav-link:hover{
+        color: red;
+        background-color: white;
+        
+    }
+    .img-p{
+        width: 100%;
+    }
+}
