--- a/resume.css
+++ b/resume.css
@@ -25,3 +25,14 @@
     background-color: rgb(236, 30, 30);
     border-radius: 25px;
 }
+@media only screen and (max-width: 600px) {
+    #main{
+        flex-direction: column;
+    }
+    .main{
+        display: flex;
+    }
+    .img-p{
+        width: 100%;
+    }
+}
